--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="app.js"></script>
 </head>
 <body id="main">
-    <div id = "home"> 
+    <div id = "text"> 
     <h1>
         Eat Me
     </h1>
