--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <script src="app.js"></script>
 </head>
 <body id="main">
-    <div id = "text"> 
-    <h1>
+    <h1 id="counter">
         Eat Me
     </h1>
-    <button onclick="start()">
+    <div id = "para">
+    <button id="startButton" onclick="start()">
         Start
     </button>
-    <p>
+    <p id="text">
         Click as many cookies as possible before the time runs out!
     </p>
     </div>
